# codescope

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
codescope/: __main__.py  cli.py  config.py
codescope/analysis/: __init__.py  aggregator.py  finding.py  runner.py  session.py
codescope/frontend/: index.html  package.json  vite.config.ts
codescope/frontend/src/: App.tsx  api.ts  types.ts
codescope/hotspot/: __init__.py  ranker.py  scorer.py
codescope/hotspot/signals/: complexity.py  coupling.py  git.py  size.py
codescope/indexer/: __init__.py  ast_extractor.py  incremental.py  index.py  walker.py
codescope/indexer/languages/: java.py  typescript.py
codescope/llm/: __init__.py  prompt_builder.py  provider.py  response_parser.py
codescope/output/: __init__.py  base.py  markdown.py  review_report.py
codescope/patterns/: __init__.py  loader.py  namespace.py  schema.py
codescope/patterns/builtin/: angular_architecture.yaml  angular_rxjs.yaml  angular_testing.yaml  java_architecture.yaml  java_spring_context.yaml  java_spring_data.yaml  java_spring_security.yaml  java_testing.yaml
codescope/server/: app.py  websockets.py
docs/: codescope-features.md  codescope-spec.md
tests/: conftest.py  test_aggregator.py  test_config.py  test_hotspot_scorer.py  test_indexer.py  test_output.py  test_pattern_library.py  test_response_parser.py
tests/fixtures/angular/: items.component.ts
tests/fixtures/java/: OrderService.java  UserController.java
(+4 files in other folders)
